# fastapi-boilerplate

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
src/siteops_platform/: __init__.py  main.py
src/siteops_platform/api/: __init__.py  deps.py
src/siteops_platform/api/v1/: __init__.py  health.py  items.py  router.py
src/siteops_platform/application/: __init__.py
src/siteops_platform/application/dto/: __init__.py  pagination.py
src/siteops_platform/application/use_cases/: __init__.py  items.py
src/siteops_platform/core/: config.py  exceptions.py  idempotency.py  logging.py  middleware.py  responses.py
src/siteops_platform/domain/: __init__.py
src/siteops_platform/domain/entities/: item.py
src/siteops_platform/domain/repositories/: item_repository.py
src/siteops_platform/infrastructure/: __init__.py  redis_client.py
src/siteops_platform/infrastructure/persistence/: __init__.py  base.py  session.py  uow.py
src/siteops_platform/infrastructure/persistence/models/: __init__.py  item.py
src/siteops_platform/infrastructure/persistence/repositories/: item_repository.py
src/siteops_platform/modules/: __init__.py
src/siteops_platform/modules/audit/: router.py
src/siteops_platform/modules/auth/: __init__.py  deps.py  revocation.py  router.py  schemas.py  token_service.py
src/siteops_platform/modules/users/: router.py
tests/: conftest.py
tests/api/: test_audit.py  test_health.py  test_items.py  test_users.py
tests/integration/: __init__.py  test_placeholder.py
tests/unit/: test_item_repository_contract.py  test_item_use_cases.py
